2011-08-27  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/datafile.c (expect_string) src/eval.c src/eval.h docs/gnuplot.doc:
	Add patch #3397007 to complete the support for named columns with the 
	"labels" style. The following now works: 
	    plot 'data' using "A":"B":"labels" with labels
	Update the documentation. 
	
	* src/datafile.c (f_timecolumn) src/plot2d.c:
	Track the current using spec to ensure that the timecolumn function
	gets the right timeformat. (fixes part of bug #3163386)

	* demo/timedat.dem: Remove the relative date demo because it was 
	misleading and incorrect.

	* src/set.c (set_tics): For some options set_tics() 
	didn't act on all axes.
	
	* src/graphics.c (boundary): Fix (?) boundary calculation for 
	"set xtics rotate".

2011-08-25  René Haber  <renehaber@users.sourceforge.net>

	* term/cairo.trm: New terminal epscairo using the shared cairo/pango
	code to produce and export an eps surface.

	* term/term.c: Allow "set term eps" as short for "set term epscairo".

2011-08-24  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/command.c src/command.h src/win/winmain.c: "raise/lower <id>"
	command for windows terminal.

	* src/command.c (rlgets): Restore code for builtin readline which was
	deleted by accident.

2011-08-23  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/datafile.c (f_stringcolumn) docs/gnuplot.doc:
	Implement 'stringcolumn("string")' in using specs to allow named columns
	for the "labels" style too. The more natural 
	    plot 'data' using "A":"B":"labels" with labels
	still doesn't work: document this fact. 

2011-08-23  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/command.c (rlgets): Removing duplicate entries trashes command
	line history when using editline. Just suppress adding the same command
	to history repeatedly.
	* src/history.c (history_find_all): editline's version of
	history_set_pos() does not work, so traverse history list manually.