@@ -1,5 +1,5 @@
 #
-# $Id: makefile.unx,v 1.16 2011/08/09 17:34:29 sfeam Exp $
+# $Id: makefile.unx,v 1.17 2011/08/27 21:05:41 sfeam Exp $
 #
 #
 ############################################################
@@ -174,7 +174,6 @@ TERMFLAGS = -I. -Iterm $(PLOTXFLAG)
 #  -lsuntool -lsunwindow -lpixrect  if you have -DSUN in TERMFLAGS
 #  -lccgi if -DCGI in TERMFLAGS
 #  -lvga if -DLINUXVGA in TERMFLAGS
-#  -lmgr -lpixrect if -DMGR in TERMFLAGS. (conflicts with SunView)
 #  -lreadline (or -Lsomewhere libreadline.a) if you use the gnu version
 #  -ltermcap might be necessary after -lreadline
 LIBS = -lm # -lplot is no longer shipped on SUNs
@@ -263,15 +262,6 @@ SUN_X11_FLAGS = \
            PLOTXFLAG="$(PLOTXFLAG)" GNUPLOT_X11=$(GNUPLOT_X11) \
            X11INSTALL="$(X11INSTALL)" \
            TERMFLAGS="$(TERMFLAGS)"
-
-SUN_X11_MGR_FLAGS = \
-           CFLAGS="$(COPTS) $(OPTIONS)" \
-           LIBS="-lmgr -lpixrect -L/usr/mgr/lib $(LIBS)" \
-           X11FLAGS="$(X11FLAGS)" X11INCLUDES="$(X11INCLUDES)" \
-           X11LIBS="$(X11LIBS)" \
-           PLOTXFLAG="$(PLOTXFLAG)" GNUPLOT_X11=$(GNUPLOT_X11) \
-           X11INSTALL="$(X11INSTALL)" \
-           TERMFLAGS="-I/usr/mgr/include -I. -Iterm -DMGR $(TERMFLAGS)"
 
 CGI_FLAGS = \
            CFLAGS="$(COPTS) $(OPTIONS) -Dunix" \
@@ -431,7 +421,7 @@ CSOURCE5 = term/ai.trm term/aed.trm \
 	term/dxf.trm term/dxy.trm term/debug.trm \
 	term/emxvga.trm term/eepic.trm term/epson.trm term/excl.trm \
 	term/fig.trm term/grass.trm term/hp26.trm term/hp2648.trm term/hpgl.trm \
-	term/hp500c.trm term/hpljii.trm term/metafont.trm term/mgr.trm\
+	term/hp500c.trm term/hpljii.trm term/metafont.trm\
 	term/hppj.trm
 CSOURCE6 = term/impcodes.h term/imagen.trm term/next.trm term/object.h \
 	term/kyo.trm term/latex.trm term/mif.trm \
@@ -604,9 +594,6 @@ sun:
 
 sun_x11:
 	$(MAKE) $(MFLAGS) $(MY_FLAGS) $(SUN_X11_FLAGS)  $(TARGET)
-
-sun_x11_mgr:
-	$(MAKE) $(MFLAGS) $(MY_FLAGS) $(SUN_X11_MGR_FLAGS)  $(TARGET)
 
 sgi:
 	$(MAKE) $(MFLAGS) $(MY_FLAGS) $(SGI_FLAGS)      $(TARGET)
