@@ -323,7 +323,6 @@ $ SUN = 0
 $ NOCWDRC = 0
 $ THIN_PLATE_SPLINES_GRID = 0
 $ COLUMN_HELP = 0
-$ MGR = 0
 $ ! USE_MOUSE = 0   ! USE_MOUSE is defined above         
 $ !
 $ OPEN/READ IN CONFIG.HIN
