@@ -20,7 +20,7 @@ $(T)gd.trm $(T)ggi.trm $(T)gpic.trm \
 $(T)grass.trm $(T)hp26.trm $(T)hp2648.trm $(T)hp500c.trm $(T)hpgl.trm \
 $(T)hpljii.trm $(T)hppj.trm $(T)imagen.trm $(T)kyo.trm \
 $(T)latex.trm $(T)linux.trm $(T)mac.trm $(T)metafont.trm $(T)metapost.trm \
-$(T)mgr.trm $(T)mif.trm $(T)next.trm $(T)openstep.trm \
+$(T)mif.trm $(T)next.trm $(T)openstep.trm \
 $(T)pbm.trm $(T)pc.trm $(T)pdf.trm $(T)pm.trm $(T)post.trm $(T)pslatex.trm \
 $(T)pstricks.trm $(T)qms.trm $(T)regis.trm $(T)sun.trm \
 $(T)svg.trm $(T)t410x.trm $(T)tek.trm $(T)texdraw.trm $(T)tgif.trm \
